--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,7 @@
    ],
    "source": [
     "greenville_population = None # change None\n",
-    "greenville_population = greenville['population'].value() # 84554"
+    "greenville_population = greenville['population'] # 84554"
    ]
   },
   {
