--- a/index.ipynb
+++ b/index.ipynb
@@ -95,7 +95,8 @@
    ],
    "source": [
     "greenville_population = None # change None\n",
-    "greenville_population = greenville['population'] # 84554"
+    "greenville_population = greenville['population']\n",
+    "gre# 84554"
    ]
   },
   {
