automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "greenville_population = None # change None\n",
     "greenville_population = greenville['population']\n",
-    "gre# 84554"
+    "greenville_population # 84554"
    ]
   },
   {
