automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,8 +138,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = N\n",
-    "city_keys # ['Area', 'City', 'Country', 'Population']"
+    "city_keys = greenville.key()\n",
+    "listcity_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
   {
