automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "city_keys = greenville.key()\n",
-    "listcity_keys # ['Area', 'City', 'Country', 'Population']"
+    "list(city_keys) # ['Area', 'City', 'Country', 'Population']"
    ]
   },
   {
