--- a/index.ipynb
+++ b/index.ipynb
@@ -134,11 +134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Area', 'City', 'Country', 'Population']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "city_keys = greenville.key()\n",
+    "city_keys = greenville.keys()\n",
     "list(city_keys) # ['Area', 'City', 'Country', 'Population']"
    ]
   },
